--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "ethers": "^5.7.2",
     "express": "^4.17.1",
-    "socket.io": "^2.3.0",
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "socket.io": "^2.3.0"
   }
 }
