--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@pushprotocol/restapi": "^1.2.15",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "express": "^4.17.1",
